# ram-eats-v3

./: .gitignore
backend/: app.py  pyproject.toml
backend/src/api/mealtracker/: io.py  routes.py
backend/src/api/menu/: io.py  routes.py
backend/src/api/nutrition_tracker/: io.py  routes.py
backend/src/api/recommend/: io.py  routes.py
backend/src/api/recommendation/: io.py  routes.py
backend/src/globals/: environment.py
backend/src/modules/example/: module.py
backend/src/modules/item_tracker/: module.py
backend/src/modules/meal_calculation/: module.py
backend/src/modules/populate_menu/: module.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: footer.tsx  header.tsx
frontend/app/dashboard/: layout.tsx
frontend/app/dashboard/home/: page.tsx
frontend/app/dashboard/menu/: page.tsx
frontend/app/dashboard/settings/: form-header.tsx  layout.tsx  page.tsx  profile-form.tsx
frontend/app/dashboard/settings/activity/: page.tsx
frontend/app/dashboard/settings/physique/: page.tsx
frontend/app/models/: models.tsx
frontend/components/ui/: drawer.tsx  navigation-menu.tsx
frontend/utils/: auth.ts
frontend/utils/settings-page/: submit-form.ts
frontend/utils/supabase/: client.ts  middleware.ts  server.ts
