[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nathan Santiago <santiagonathan9254@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
